--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=l9dwvv6j64hlhpul.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_USER=root
-DB_PASS=password
-DB_DATA=test_db
+DB_USER=qghphogzlg3ytrsu
+DB_PASS=ek8acu11uq33dif1
+DB_DATA=wmbprmhcbyf4mha3
