--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-mysql-session": "^2.1.0",
+    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
@@ -26,5 +30,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
+  },
+  "engines": {
+    "node": "v10.15.3"
   }
 }
