--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "directmessage",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
-  "main": "server.js",
+  "description": "",
+  "main": "dm.js",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint --quiet .",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "express-mysql-session": "^2.1.0",
-    "express-session": "^1.16.2",
-    "mysql2": "^1.6.5",
-    "passport": "^0.4.0",
-    "sequelize": "^5.8.6"
+    "express": "^4.15.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -33,5 +23,6 @@
   },
   "engines": {
     "node": "v10.15.3"
-  }
+  },
+  "author": ""
 }
